overlaping fix

--- a/main.css
+++ b/main.css
@@ -706,37 +706,50 @@ line-height: normal;
 
 
 #insideCircle{
-  position: relative;
-}
+ position: relative;
 
+}
+.lightbulb-container{
+ 
+  display: flex;
+ justify-content: center;
+ align-items: center;
+}
 .lightbulb{
+ 
  width: 100%;
- height: 874px;
- position: absolute;
+height: auto;
+display: block;
+
+
  
 }
 .wrapper{
-  position: absolute; /* Set the circles' container to be positioned absolutely */
-   /* Align the circles to the left of the section */
-   margin-top: 76px;
-  width: 100%; /* Make the circles container take the full width of the section */
-  height: 100%; /* Make the circles container take the full height of the section */
-  display: flex; /* Use flexbox to center the circles horizontally and vertically */
-  justify-content: center; /* Center the circles horizontally */
-  align-items: center; /* Center the circles vertically */
-  pointer-events: none
+position: absolute;
+ 
+display: flex;
+ justify-content: center;
+ align-items: center;
+ 
+  
 }
 .circle-1{
+  position: absolute;
+ 
 width: 760px;
 height: 760px;
 border: 5px solid #FFF;
 border-radius: 50%;
 
 
+ 
+
 
 }
 
 .circle-2{
+  
+  position: absolute;
   width: 720px;
   height: 720px;
  
